@@ -11,7 +11,7 @@ Lines2=__1__\n__2__
 Blue=[color=blue]__1__[/color]
 craft=[color=blue]__1__ __4__: herstellen\n__1__ __5__: 5 herstellen\n__3__ __4__: alle herstellen.[/color]
 research=[color=blue]__2__ __4__: Forschung beginnen.[/color]
-multiple-research=[color=blue]__1__ __2__ __4__: Technologische Voraussetzung erforschen.[/color]
+multiple-research=[color=blue]__1__ __2__ __4__: Technologische Voraussetzungen erforschen.[/color]
 selector=Wähle ein Ziel für die Hilfe
 initial-technology=Initial freigeschaltet
 ingteb-button-description=Wenn ein Gegenstand ausgewählt ist, dann wird mit diesem Button oder __CONTROL__ingteb-main-key__ eine Hilfeseite angezeigt. Wenn es nicht klar ist, welcher Gegenstand gemeint ist, wird eine Auswahl der Kandidaten angezeigt. Gegebenenfalls werden alle Gegenstände und Flüssigkeiten zur Auswahl angeboten.
